--- a/DibujoAhorcado/Properties/Recursos.resx
+++ b/DibujoAhorcado/Properties/Recursos.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Modulo" xml:space="preserve">
-    <value>Ejercicio4</value>
+    <value>Diseño de Interfaces</value>
   </data>
 </root>
